Fix spacing between adjacent info divs

--- a/static/blog.css
+++ b/static/blog.css
@@ -166,7 +166,7 @@ figcaption {
 }
 
 .info {
-    margin: 0 -1em;
+    margin: 1em -1em;
     padding: .3em 1em;
     background-color: #252525;
     border: 1px solid #333;
